bpo-25794: Fix type.__setattr__() for non-interned attribute names.

Based on patch by Eryk Sun.